bad/assign_arr_elem_bool_void.example_compiler_output
ERROR
[1mbad/assign_arr_elem_bool_void.lat:5:22: [1;31merror: [0;1massigning to `boolean` from incompatible type `void`[m
	(new boolean[3])[1] = vfunc();
	                    [1;32m^[m
